local-k8s-kind/yml/argocd-server-clusterip.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: argocd-server-clusterip
  name: argocd-server-clusterip
  namespace: argocd
spec:
  ports:
  # - port: 8080
  - port: 30009
    protocol: TCP
  selector:
    app.kubernetes.io/name: argocd-server
