local-k8s-kind/yml/argocd-server-nodeport.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: argocd-server-nodeport
  name: argocd-server-nodeport
  namespace: argocd
spec:
  ports:
  - protocol: TCP
    port: 80 # Cluster 내부에서 사용하는 포트 
    targetPort: 80 # Pod 입장에서 자기 자신을 노출할 포트
    nodePort: 30009 # 외부에서 접속하기 위해 사용 
  selector:
    app.kubernetes.io/name: argocd-server
  sessionAffinity: None
  type: NodePort
